force-app/main/default/objects/Command__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>The implementation of mtr_ICommand to execute during the chosen phase.</description>
    <inlineHelpText>The implementation of mtr_ICommand to execute during the chosen phase.</inlineHelpText>
    <label>Apex Class</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>