force-app/main/default/objects/Command__mdt/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>The phase for this command to execute during.</description>
    <inlineHelpText>The phase for this command to execute during.</inlineHelpText>
    <label>Phase</label>
    <referenceTo>CommandPhase__mdt</referenceTo>
    <relationshipLabel>Commands</relationshipLabel>
    <relationshipName>Commands</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>